@@ -13,6 +13,7 @@ export(install.R)
 export(install.RStudio)
 export(install.Rtools)
 export(install.URL)
+export(installr)
 export(is.Rgui)
 export(is.RStudio)
 export(is.windows)
